<resources>
    <string name="app_name">LokaCar</string>
    <string name="title_activity_gestion_location">GestionLocationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="client">Client :</string>
    <string name="vehicule">Véhicule :</string>
    <string name="prenom">Prénom :</string>
    <string name="nom">Nom :</string>
    <string name="coordonnees">Coordonnées :</string>
    <string name="telephone">Téléphone :</string>
    <string name="mail">Mail :</string>
    <string name="date_de_debut">Date de début :</string>
    <string name="date_de_fin">Date de fin :</string>
    <string name="immatriculation">Immatriculation :</string>
    <string name="date_de_d_but">Date de début :</string>
    <string name="location">Location :</string>
    <string name="etat_des_lieux">Etat des lieux</string>
    <string name="terminer_la_location">Terminer la location</string>
    <string name="choisissez_une_date">Choisissez une date</string>
</resources>
