<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"/>
        <TextView
            android:id="@+id/lstClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="nom prenom"
            android:layout_weight="0.4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/date_de_debut"/>
        <TextView
            android:id="@+id/lstDateDeDebut"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="--/--/----"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicule" />
        <TextView
            android:id="@+id/lstVehicule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="immat"
            android:layout_weight="0.4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Date de fin : "
            />
        <TextView
            android:id="@+id/lstDateDeFin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="--/--/----"
            />
    </LinearLayout>
</LinearLayout>