<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DetailLocationActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/client_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="prenom nom"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adresse : "
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/adresse_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="45 rue du slip"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/telephone_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0606060606"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/email_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="client@toto.com"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:paddingRight="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicule"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/nom_vehicule_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="nomCommercialDuModele"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immatriculation"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/immat_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ED-789-FG"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_de_debut"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/date_debut_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="--/--/----"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_de_fin"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/date_fin_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="--/--/----"
                android:paddingRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Date retour réelle"

                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_date_retour_reel"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="--/--/----"
                android:paddingRight="10dp"
                android:layout_weight="3" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatBtnPickDateReel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_info_details"

                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kilometrage : "
                android:paddingRight="5dp" />

            <EditText
                android:id="@+id/txt_det_km_ret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="km"
                android:paddingRight="5dp"
                android:textSize="15dp"
                android:inputType="number" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_terminer_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminer_la_location"
                android:layout_gravity="bottom"

                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_etat_des_lieux_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etat_des_lieux"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_weight="2"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_loc_menu_cli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"

        android:layout_marginBottom="80dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#5c6bc0"
        android:src="@android:drawable/ic_dialog_dialer" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_loc_edit_cli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#5c6bc0"
        android:src="@android:drawable/ic_menu_edit"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_loc_call_cli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#5c6bc0"
        android:src="@android:drawable/ic_menu_call"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_loc_mail_cli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#5c6bc0"
        android:src="@android:drawable/ic_dialog_email"
        android:visibility="gone" />


</RelativeLayout>